--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "server": "^1.0.37",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage":"."
+  "homepage": "."
 }
